# misis_cw

./: CMakeLists.txt  ImageRecognition.cpp  README.md
libs/lib/: OpenCVModules-debug.cmake  OpenCVModules-release.cmake
